Some visual changes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main>
         <nav>
             <h2 class="title">Ulubione</h2>
+            <p class="contains" id="contains"></p>
             <table>
                 <tbody id="favourite-table">
                 </tbody>
